solves JDK 11 concerns with jersey